--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -11,3 +11,6 @@ jobs:
     steps:
       - name: Run top issues action
         uses: burghyburghy/composite_action@main
+      - name: print
+        run: |
+          cat /home/runner/work/_actions/burghyburghy/composite_action/main/README.md
